--- a/isys/Makefile.am
+++ b/isys/Makefile.am
@@ -17,6 +17,8 @@
 #
 # Author: David Cantrell <dcantrell@redhat.com>
 
+pkgpyexecdir = $(pyexecdir)/py$(PACKAGE_NAME)
+
 ISYS_SRCS = devices.c imount.c cpio.c uncpio.c lang.c \
             isofs.c linkdetect.c vio.c ethtool.c eddsupport.c iface.c \
             auditd.c log.c
@@ -30,11 +32,8 @@ ISYS_LIBS   = $(RESOLV_LIBS) $(EXT2FS_LIBS) $(ZLIB_LIBS) \
               $(DEVMAPPER_LIBS) $(BLKID_LIBS) $(X11_LIBS) $(SELINUX_LIBS) \
               $(LIBNL_LIBS) $(LIBNM_GLIB_LIBS)
 
-isysdir = $(libdir)/$(PACKAGE_NAME)
+isysdir     = $(pkgpyexecdir)
 isys_PYTHON = *.py
-
-pkgpyexecdir = $(libdir)/$(PACKAGE_NAME)
-pkgpythondir = $(libdir)/$(PACKAGE_NAME)
 
 pkgpyexec_LTLIBRARIES = _isys.la
 _isys_la_CFLAGS       = $(PYTHON_INCLUDES) $(ISYS_CFLAGS)
