Add a Requires: for tigervnc-server (#561498).
Most anything that anaconda calls should be in a Requires: to make sure it
gets pulled into the tree.

--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -122,6 +122,7 @@ Requires: dbus-python
 Requires: cracklib-python
 Requires: python-bugzilla
 Requires: python-nss
+Requires: tigervnc-server
 %ifarch %livearches
 Requires: usermode
 Requires: zenity
