Be more explicit in which libraries we link with.
This is required by the latest build system's linker changes.

--- a/configure.ac
+++ b/configure.ac
@@ -128,12 +128,14 @@ AM_CHECK_PYTHON_HEADERS(,[AC_MSG_ERROR(could not find Python headers or library)
 
 # Check for libraries we need that provide pkg-config scripts
 PKG_PROG_PKG_CONFIG([0.23])
+PKG_CHECK_MODULES([X11], [x11 >= 1.3])
+PKG_CHECK_MODULES([XCOMPOSITE], [xcomposite >= 0.4.1])
 PKG_CHECK_MODULES([GLIB], [glib-2.0 >= 2.16.1])
 PKG_CHECK_MODULES([GTK_X11], [gtk+-x11-2.0 >= 2.16.1])
 PKG_CHECK_MODULES([GDK], [gdk-2.0 >= 2.16.1])
 PKG_CHECK_MODULES([NETWORKMANAGER], [NetworkManager >= 0.7.1])
 PKG_CHECK_MODULES([LIBNL], [libnl-1 >= 1.0])
-PKG_CHECK_MODULES([LIBNM_GLIB], [libnm-glib >= 0.7.1])
+PKG_CHECK_MODULES([LIBNM_GLIB], [libnm-glib >= 0.7.1 libnm-util >= 0.7.1])
 PKG_CHECK_MODULES([DEVMAPPER], [devmapper >= 1.02.17])
 PKG_CHECK_MODULES([LIBCURL], [libcurl >= 7.19.5])
 PKG_CHECK_MODULES([RPM], [rpm >= 4.8.0])
