Use lsznet.raw from s390utils package (#563548).
The lsznet.raw and controlunits.sh files are now part of the s390-tools
project, which is in the s390utils package.  Remove our copies and make
sure we use the ones from the s390utils package.

--- a/loader/Makefile.am
+++ b/loader/Makefile.am
@@ -27,7 +27,7 @@ noinst_HEADERS     = *.h
 
 if IS_S390
 boot_PROGRAMS      += shutdown
-dist_boot_SCRIPTS  = linuxrc.s390 lsznet.raw controlunits.sh
+dist_boot_SCRIPTS  = linuxrc.s390
 else
 boot_PROGRAMS      += init
 endif
