--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -43,6 +43,7 @@ BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 %define pythoncryptsetupver 0.0.6
 %define mehver 0.4
 %define sckeyboardver 1.3.1
+%define libblkid 2.17.1-1
 
 BuildRequires: audit-libs-devel
 BuildRequires: bzip2-devel
@@ -57,7 +58,7 @@ BuildRequires: libarchive-devel
 BuildRequires: libX11-devel
 BuildRequires: libXt-devel
 BuildRequires: libXxf86misc-devel
-BuildRequires: libblkid-devel
+BuildRequires: libblkid-devel >= %{liblkid}
 BuildRequires: libcurl-devel
 BuildRequires: libnl-devel >= %{libnlver}
 BuildRequires: libselinux-devel >= %{libselinuxver}
