Correct problem with screenfont and keymap on ppc[64] systems (#569505).
Copy loader/keymaps-ppc to loader/keymaps-ppc64
Copy fonts/screenfont-ppc.gz to fonts/screenfont-ppc64.gz

Update IS_PPC test in configure.ac to pass for ppc and ppc64.

Modify fonts/Makefile.am and remove explicit arch targets and just have
one for $(ARCH).

Revert change from 7a589e875d632f40f7266681cc71c0b639a90d05.

The intent with this commit is to make the keymap and screenfont
handling on ppc[64] during image generation more like what we do with
i386 and x86_64.

--- a/fonts/Makefile.am
+++ b/fonts/Makefile.am
@@ -26,14 +26,5 @@ EXTRA_DIST = screenfont-*.gz updfonts
 
 MAINTAINERCLEANFILES = Makefile.in
 
-i386:
-	./updfonts i386
-
-alpha:
-	./updfonts alpha
-
-sparc:
-	./updfonts sparc
-
-ia64:
-	./updfonts ia64
+$(ARCH):
+	./updfonts $(ARCH)
