make sure we include sparc boot configs
Include generation of SPARC Boot configs

--- a/bootdisk/Makefile.am
+++ b/bootdisk/Makefile.am
@@ -17,6 +17,6 @@
 #
 # Author: David Cantrell <dcantrell@redhat.com>
 
-SUBDIRS = i386 ppc s390x x86_64
+SUBDIRS = i386 ppc sparc s390x x86_64
 
 MAINTAINERCLEANFILES = Makefile.in
