--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -46,6 +46,7 @@ BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 %define sckeyboardver 1.3.1
 %define libblkid 2.17.1-1
 %define fcoeutilsver 1.0.12-3.20100323git
+%define isomd5sumver 1.0.6
 
 BuildRequires: audit-libs-devel
 BuildRequires: bzip2-devel
@@ -55,7 +56,7 @@ BuildRequires: elfutils-devel
 BuildRequires: gettext >= %{gettextver}
 BuildRequires: gtk2-devel
 BuildRequires: intltool >= %{intltoolver}
-BuildRequires: isomd5sum-devel
+BuildRequires: isomd5sum-devel >= %{isomd5sumver}
 BuildRequires: libarchive-devel
 BuildRequires: libX11-devel
 BuildRequires: libXt-devel
