put the analog script into the RPM
This was accidentally omitted from:
d42a7a7e21c6b4a45437a6139e169ccaaf17784b.

--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -207,6 +207,7 @@ update-desktop-database &> /dev/null || :
 %{_datadir}/anaconda
 %{_prefix}/lib/anaconda
 %{_prefix}/lib/anaconda-runtime
+%{_prefix}/libexec/anaconda
 %ifarch %livearches
 %{_bindir}/liveinst
 %{_sbindir}/liveinst
