Remove isys/str.c, replace calls with glib.h or string.h calls.
str.c was from a time when loader was still a statically linked binary.
Times have changed.  Removed str.c and replaced calls with either
string.h or glib.h functions.

For g_ascii_strup() and g_ascii_strdown(), those functions dup the
passed in string, change it, and return that.

--- a/isys/Makefile.am
+++ b/isys/Makefile.am
@@ -19,7 +19,7 @@
 
 ISYS_SRCS = devices.c imount.c cpio.c uncpio.c lang.c \
             isofs.c linkdetect.c vio.c ethtool.c eddsupport.c iface.c \
-            str.c auditd.c log.c
+            auditd.c log.c
 
 dist_noinst_HEADERS = *.h
 
