Update filter for translation log entries.

--- a/Makefile.am
+++ b/Makefile.am
@@ -116,7 +116,7 @@ rpmlog:
 	@git log --pretty="format:- %s (%ae)" \
 		$(PACKAGE_NAME)-$(PACKAGE_VERSION)-$(PACKAGE_RELEASE).. | \
 		sed -e 's/@.*)/)/' | sed -e 's/%/%%/g' | \
-		grep -v -- "- Sending translation for " | \
+		grep -v -- "- l10n: " | \
 		grep -v -- "- Merge commit "
 
 bumpver:
