--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -44,6 +44,7 @@ BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 %define mehver 0.4
 %define sckeyboardver 1.3.1
 %define libblkid 2.17.1-1
+%define fcoeutilsver 1.0.12-2.20100323git
 
 BuildRequires: audit-libs-devel
 BuildRequires: bzip2-devel
@@ -145,6 +146,7 @@ Requires: NetworkManager >= %{nmver}
 Requires: dhclient
 Requires: anaconda-yum-plugins
 Requires: libselinux-python >= %{libselinuxver}
+Requires: fcoe-utils >= %{fcoeutilsver}
 %ifarch %{sparc}
 Requires: elftoaout piggyback
 %endif
