--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -11,6 +11,7 @@ exception.py
 gui.py
 image.py
 installclass.py
+installinterfacebase.py
 iutil.py
 kickstart.py
 livecd.py
@@ -31,6 +32,7 @@ installclasses/rhel.py
 # Graphical user interface source files
 iw/GroupSelector.py
 iw/account_gui.py
+iw/advanced_storage.py
 iw/autopart_type.py
 iw/blpasswidget.py
 iw/bootloader_main_gui.py
@@ -84,6 +86,11 @@ storage/devicelibs/lvm.py
 storage/devices.py
 storage/devicetree.py
 storage/formats/fs.py
+storage/formats/luks.py
+storage/formats/lvmpv.py
+storage/formats/swap.py
+storage/dasd.py
+storage/fcoe.py
 storage/iscsi.py
 storage/partitioning.py
 storage/zfcp.py
@@ -92,6 +99,7 @@ storage/zfcp.py
 textw/complete_text.py
 textw/constants_text.py
 textw/keyboard_text.py
+textw/language_text.py
 textw/netconfig_text.py
 textw/partition_text.py
 textw/progress_text.py
