--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -216,6 +216,10 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Thu Mar 25 2010 David Cantrell <dcantrell@redhat.com> - 13.21.20.2-1
+- Try to pull in generic libraries as well as optimized ones (#572178)
+  (pjones)
+
 * Wed Mar 17 2010 David Cantrell <dcantrell@redhat.com> - 13.21.20.1-1
 - Don't traceback when a user tries to put /boot on an LV (#567515) (hdegoede)
 - Fix backtrace when trying to use LV for /boot (#567515) (hdegoede)
