--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -219,6 +219,26 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Fri Mar 26 2010 David Cantrell <dcantrell@redhat.com> - 13.21.22-1
+- Try to pull in generic libraries as well as optimized ones (#572178)
+  (pjones)
+- Translate the Back button in glade (#576894) (akozumpl)
+- Make the kernel 'sshd' parameter work as expected (#572493) (akozumpl)
+- Redo the 'sshd' flag. (#572493) (ajax)
+- yum requires the proxy settings to include a protocol (#484788, #567982).
+  (clumens)
+- Only look for extended partitions on partitioned devices (#577383)
+  (hdegoede)
+- Include the report module and related support files (#562656). (clumens)
+- report handles exn saving now, and doesn't require a Filer (#562656).
+  (clumens)
+- Adapt to using report's UI API (#562656). (clumens)
+- Fix referring to disks by-label, by-uuid, etc (#577385). (clumens)
+- Add support for recognizing BIOS EDD configured FCoE drives (#513018)
+  (hdegoede)
+- Update format of cdrom devices when looking for repos on media (#576542)
+  (rvykydal)
+
 * Tue Mar 23 2010 David Cantrell <dcantrell@redhat.com> - 13.21.21-1
 - Update filter for translation log entries. (dlehman)
 - Reset comps/groups info after editing repo in UI (#574761) (rvykydal)
